make title smaller to prevent cutting off

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,8 +9,7 @@ body {
 	display: flex;
 	align-content: flex-start;
 	justify-content: center;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding: 0 3em;
 }
 
 .main {
@@ -20,7 +19,7 @@ body {
 }
 
 .title {
-	font-size: 3.5em;
+	font-size: 3em;
 	text-align: center;
 }
 
